# bookMDViewer

./: LICENSE  README.en.md  README.md  index.html  package-lock.json  package.json  sample.md  vite.config.ts
.github/workflows/: release.yml
docs/: demo.md  index.html  mermaid-sample.md
src/: main.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
