[package]
name = "md-viewer"
version = "1.0.3"
description = "A lightweight local Markdown viewer"
authors = ["craig"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (Windows quirk).
name = "md_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"

# Smallest possible release binary.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
